--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <section id="upper">
         <div class="XnO">
-            <img src="/components/X.png" alt="X mark">
-            <img src="/components/O.png" alt="O mark">
+            <img src="components/X.png" alt="X mark">
+            <img src="components/O.png" alt="O mark">
         </div>
         <div class="turn-id">
-            <img class="turn-id-img" src="/components/x-silver.png" alt="x-turn">
+            <img class="turn-id-img" src="components/x-silver.png" alt="x-turn">
             <span class="turn-text">TURN</span>
         </div>
         <div class="reset">
-            <img class="reset-img" src="/components/refreshing.png" alt="reset">
+            <img class="reset-img" src="components/refreshing.png" alt="reset">
         </div>
     </section>
 
